カレンダーフルサイズ変更前

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.8/main.min.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.8/main.min.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.8/main.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="%PUBLIC_URL%/fullcalendar-daygrid.css" />
 <title>Tamurisu</title>
   </head>
   <body>
